--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,2 +1,25 @@
-﻿<h1>Index View</h1>
-<p>Get to building things!</p>
+﻿<div class=" container text-white text-center" style="height:400px; width: 100%">
+    <div id="map">
+
+    </div>
+</div>
+<div class="container text-center">
+    <table class="table table-striped text-white">
+        <thead>
+            <tr>
+                <th scope="col">Location</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">End Date</th>
+                <th scope="col">Days Until</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="#">Destination</a></td>
+                <td>Start Date</td>
+                <td>End Date</td>
+                <td>Days Until</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
