--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -1,2 +1,29 @@
-﻿<h1>Index View</h1>
-<p>Get to building things!</p>
+﻿<div class=" container text-white text-center" style="height:400px; width: 100%">
+    <div id="map">
+
+    </div>
+</div>
+<div class="container text-center">
+    <div class="container">
+        <h3 class="text-white mt-5">Your Events</h3><a href="/newevent" role="button">Add Event</a>
+    </div>
+    <table class="table table-striped text-white">
+        <thead>
+            <tr>
+                <th scope="col">Location</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">End Date</th>
+                <th scope="col">Days Until</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="#">Destination</a></td>
+                <td>Start Date</td>
+                <td>End Date</td>
+                <td>Days Until</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDd0qpuCR49IQTA4Ce6wDEw5Gh5l10Swb8&callback=initMap" async defer></script>
