--- a/Views/User/LoginReg.cshtml
+++ b/Views/User/LoginReg.cshtml
@@ -6,7 +6,7 @@
             <h3 class="display-4">Register</h3>
         </div>
         <div class="container col-12 bg-light pt-2 mt-4 pb-3">
-            <form asp-action="CreateUser" asp-controller="Home" method="post">
+            <form asp-action="CreateUser" asp-controller="User" method="post">
                 <div class="form-group">
                     <label asp-for="newUser.FirstName" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.FirstName" class="form-text text-danger"></span>
@@ -47,7 +47,7 @@
             <h3 class="display-4">Login</h3>
         </div>
         <div class="container col-12 bg-light pt-2 mt-4 pb-3">
-            <form asp-action="UserLogin" asp-controller="Home" method="post">
+            <form asp-action="UserLogin" asp-controller="User" method="post">
                 <div class="form-group">
                     <label asp-for="returningUser.Email" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="returningUser.Email" class="form-text text-danger"></span>
@@ -59,7 +59,7 @@
                     <span asp-validation-for="returningUser.Password" class="form-text text-danger"></span>
                     <input asp-for="returningUser.Password" class="form-control bg-light">
                 </div>
-                <button type="submit" class="btn btn-primary mb-3 mt-3 offset-10">Sign In</button>
+                <button type="submit" class="btn btn-primary mb-3 mt-3 offset-9">Sign In</button>
             </form>
         </div>
         <button type="submit" class="btn btn-lg btn-primary col-12">Login with Facebook</button>
