--- a/Views/Event/NewEvent.cshtml
+++ b/Views/Event/NewEvent.cshtml
@@ -8,14 +8,24 @@
                 <input asp-for="eventName" class="form-control">
             </div>
             <div class="form-group">
-                <span asp-for="start"></span>
-                <label asp-for="start"></label>
-                <input asp-for="start" class="form-control">
+                <span asp-for="startTime"></span>
+                <label asp-for="startTime"></label>
+                <input asp-for="startTime" class="form-control">
             </div>
             <div class="form-group">
-                <span asp-for="end"></span>
-                <label asp-for="end"></label>
-                <input asp-for="end" class="form-control">
+                <span asp-for="startDate"></span>
+                <label asp-for="startDate"></label>
+                <input asp-for="startDate" class="form-control">
+            </div>
+            <div class="form-group">
+                <span asp-for="endTime"></span>
+                <label asp-for="endTime"></label>
+                <input asp-for="endTime" class="form-control">
+            </div>
+            <div class="form-group">
+                <span asp-for="endDate"></span>
+                <label asp-for="endDate"></label>
+                <input asp-for="endDate" class="form-control">
             </div>
             <div class="form-group">
                 <span asp-for="location"></span>
