--- a/Views/Event/NewEvent.cshtml
+++ b/Views/Event/NewEvent.cshtml
@@ -47,9 +47,13 @@
         google.maps.event.addListener(autocomplete, 'place_changed', function(){
         var place = autocomplete.getPlace();
         console.log(place);
-        //document.getElementById("longitude").val() = 
-        //document.getElementById("latitude").val() = 
-        console.log(place.geometry.location.lat)
+        $("#longitude").val(place.geometry.location.lng());
+        $("#latitude").val(place.geometry.location.lat());
+        console.log(place.geometry.location.lat());
+        console.log(place.geometry.location.lng());
+        //console.log(place.formatted_address);
+        //console.log(place.formatted_phone_number);
+        //console.log(place.name);
         })
 
     }
