--- a/Views/Home/ViewEvent.cshtml
+++ b/Views/Home/ViewEvent.cshtml
@@ -1,4 +1,4 @@
-@model ViewModel
+@model viewEventVM
 
     <div class="jumbotron bg-dark">
         <div class="jumbotron bg-secondary border border-white">
