--- a/Views/User/LoginReg.cshtml
+++ b/Views/User/LoginReg.cshtml
@@ -1,68 +1,59 @@
 @model LoginRegistration
 
-<div class="bg-secondary">
-    <div class="bg-secondary p-4 d-inline-block col-6 mt-2 mr-5">
-        <div class="navbar navbar-expand-lg bg-dark text-white justify-content-between">
+<div class="container">
+    <div class="row">
+        <div class="col text-white">
             <h3 class="display-4">Register</h3>
-        </div>
-        <div class="container col-12 bg-light pt-2 mt-4 pb-3">
-            <form asp-action="CreateUser" asp-controller="User" method="post">
+            <form asp-action="CreateUser" asp-controller="User" class="col-10" method="post">
                 <div class="form-group">
                     <label asp-for="newUser.FirstName" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.FirstName" class="form-text text-danger"></span>
-                    <input asp-for="newUser.FirstName" class="form-control bg-light">
+                    <input asp-for="newUser.FirstName" class="form-control bg-light" placeholder="First Name">
                 </div>
 
                 <div class="form-group">
                     <label asp-for="newUser.LastName" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.LastName" class="form-text text-danger"></span>
-                    <input asp-for="newUser.LastName" class="form-control bg-light">
+                    <input asp-for="newUser.LastName" class="form-control bg-light" placeholder="Last Name">
                 </div>
 
                 <div class="form-group">
                     <label asp-for="newUser.Email" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.Email" class="form-text text-danger"></span>
-                    <input asp-for="newUser.Email" class="form-control bg-light">
+                    <input asp-for="newUser.Email" class="form-control bg-light" placeholder="Email">
                 </div>
 
                 <div class="form-group">
                     <label asp-for="newUser.Password" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.Password" class="form-text text-danger"></span>
-                    <input asp-for="newUser.Password" class="form-control bg-light">
+                    <input asp-for="newUser.Password" class="form-control bg-light" placeholder="Password">
                 </div>
 
                 <div class="form-group">
                     <label asp-for="newUser.Confirm" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="newUser.Confirm" class="form-text text-danger"></span>
-                    <input asp-for="newUser.Confirm" class="form-control bg-light">
+                    <input asp-for="newUser.Confirm" class="form-control bg-light" placeholder="Confirm Password">
                 </div>
-                <button type="submit" class="btn btn-primary mb-3 mt-3 offset-10">Register</button>
+                <button type="submit" class="btn btn-primary mb-3 mt-3 offset-9">Register</button>
             </form>
         </div>
-    </div>
-
-
-    <div class="bg-secondary p-4 d-inline-block col-5 align-top mt-2 ml-4">
-        <div class="navbar navbar-expand-lg bg-dark text-white justify-content-between">
+        <div class="col text-white">
             <h3 class="display-4">Login</h3>
-        </div>
-        <div class="container col-12 bg-light pt-2 mt-4 pb-3">
-            <form asp-action="UserLogin" asp-controller="User" method="post">
+            <form asp-action="UserLogin" asp-controller="User" class="col-10" method="post">
                 <div class="form-group">
                     <label asp-for="returningUser.Email" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="returningUser.Email" class="form-text text-danger"></span>
-                    <input asp-for="returningUser.Email" class="form-control bg-light">
+                    <input asp-for="returningUser.Email" class="form-control bg-light" placeholder="Email">
                 </div>
 
                 <div class="form-group">
                     <label asp-for="returningUser.Password" class="font-weight-bold mb-0"></label>
                     <span asp-validation-for="returningUser.Password" class="form-text text-danger"></span>
-                    <input asp-for="returningUser.Password" class="form-control bg-light">
+                    <input asp-for="returningUser.Password" class="form-control bg-light" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary mb-3 mt-3 offset-9">Sign In</button>
             </form>
         </div>
-        <button type="submit" class="btn btn-lg btn-primary col-12">Login with Facebook</button>
     </div>
-   
 </div>
+
